added ModelAssemblerSupport - HATEOAS feature